Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-39977

Full screen mode do not work correctly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.3.2
    • 5.3.1
    • QPA
    • None
    • Android
    • 90ed77c0448b2104d3235f9d064ad57d95f1a976 8688dfcd7ce148a8e7fcd16521d458417eadcbf8

      Hi,

      I want to report an issue about setting full screen mode on Nexus5 with Android 4.4.2. A very large white border will be appeared at the bottom of screen. (See the "Step 2 - Full Screen.png" )

      Moreover , when it go back to normal mode by setting window state to Qt::WindowMaximized (Due to QTBUG-37830). The window size will be incorrect. (See "Step 3 - Back to Normal.png")

      Example code to test has been attached.

      Thank you.

        1. example.zip
          4 kB
          Ben Lau
        2. Step 1 - Normal.png
          35 kB
          Ben Lau
        3. Step 2 - Full Screen.png
          20 kB
          Ben Lau
        4. Step 3 - Back to Normal.png
          32 kB
          Ben Lau
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tvete Paul Olav Tvete
            benlau Ben Lau
            Votes:
            14 Vote for this issue
            Watchers:
            14 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes