Use correct size in fullscreen mode

Android does not report the full screen size in display metrics.
However, it does report the correct size for layouts, which we use
to get the available geometry. Since by definition, the available
geometry should always be inside the screen geometry, it is safe to
use the maximum of the two sizes.

Task-number: QTBUG-39977
Change-Id: I78d974f12274ca67eada43f5e1d80e70149efe3f
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@digia.com>

cregit: 90ed77c0448b2104d3235f9d064ad57d95f1a976 https://github.com/qt/qtbase/commit/90ed77c0448b2104d3235f9d064ad57d95f1a976